--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             text-align: center;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-
+ 
         .controls {
             background-color: white;
             padding: 15px;
@@ -71,12 +71,19 @@
             display: none;
             z-index: 1000;
         }
+        .disclaimer {
+            text-align: center;
+            margin: 20px 0;
+            font-size: 12px;
+            color: #555;
+        }
     </style>
 </head>
 
 <body>
     <div class="header">
         <h1>Rutgers Course Prerequisites Visualization</h1>
+        <p><strong>Disclaimer:</strong> This platform is not affiliated with Rutgers University.</p>
     </div>
     
     <div class="controls">
@@ -252,6 +259,10 @@
 
     <div class="loading">Loading course data...</div>
     <div id="cy"></div>
+
+    <div class="disclaimer">
+        <p>This application is not affiliated with Rutgers University.</p>
+    </div>
 
     <script>
         let cy;
