--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <script src="https://cdn.jsdelivr.net/npm/cytoscape-dagre@2.5.0/cytoscape-dagre.min.js"></script>
     <script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
     <script src="https://unpkg.com/cytoscape-dagre/cytoscape-dagre.js"></script>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XE78N8F328"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XE78N8F328');
+    </script>
+    
     <style>
 
         body {
@@ -328,9 +339,9 @@
                         }
                     ],
                     layout: {
-                        name: 'dagre', // Defines that layout algorithm used to arrange the nodes and edge is a top-to-bottom or left-to-right 
+                        name: 'dagre', //arranges the nodes in a way that minimizes edge crossings and ensures that the edges flow in one direction. Ment for directed graphs.
                         rankDir: 'TB',// Specifies that direction in which nodes should be arranged within the layout is top to bottom
-                        fit: true
+                        fit: true // scales view so that all nodes and edges are visible within the defined area
                     }
                 });
 
