Rebased history to remove unwanted commits

--- a/index.html
+++ b/index.html
@@ -259,14 +259,10 @@
             <option value="988">Women's, Gender, and Sexuality Studies</option>
             <option value="991">World Languages</option>
         </select>
-        <button onclick="searchCourses()">Search Courses</button>
+        <button onclick="searchCourses()">Search Subjects</button>
     </div>
 
     <div id="cy"></div>
-
-    <div class="disclaimer">
-        <p>This application is not affiliated with Rutgers University.</p>
-    </div>
 
     <script>
         let cy;
